--- a/index.html
+++ b/index.html
@@ -47,9 +47,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Katrin Guschke</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Katrinfelina" target="_blank"
+            >Katrin Guschke</a
+          >
+          and is
+          <a
+            href="https://github.com/Katrinfelina/My-first-SheCodes-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://my-first-shecodesplus-project.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
